--- a/kafka/kafka-connect/dockerconfig.json
+++ b/kafka/kafka-connect/dockerconfig.json
@@ -1,7 +1,7 @@
 {
 	"auths": {
 		"https://index.docker.io/v1/": {
-			"auth": "xxxxxxxxxxxxxxxxxxxx"
+			"auth": "xxxxxxxxxxxxxxxxxxxxx"
 		}
 	}
 }
