--- a/nifi/nifi-pvc.yaml
+++ b/nifi/nifi-pvc.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: ebs-sc
+  storageClassName: ebs-sc-nifi
   resources:
     requests:
       storage: 5Gi
