--- a/nifi/nifi-sc.yaml
+++ b/nifi/nifi-sc.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: ebs-sc
+  name: ebs-sc-nifi
   namespace: nifi
 provisioner: ebs.csi.aws.com
 volumeBindingMode: WaitForFirstConsumer
